 <resources>
    <string name="app_name">Final_Project</string>
    <string name="action_settings">Settings</string>
     <string name="let_s_start_tracking_your_physical_activity">Let\'s start tracking your physical activity!</string>
     <string name="welcome">Welcome</string>
     <string name="enter_your_physical_activity">Enter your physical activity</string>
     <string name="id_string">Activity ID</string>
     <string name="activity_string">Activity Name</string>
     <string name="add_string">ADD</string>
     <string name="find_string">FIND</string>
     <string name="delete_string">DELETE</string>
     <string name="instructions">instructions</string>
     <string name="enter_your_activity">Enter your activity</string>

  <string name="weight_entry">0123456789.</string>
  <string name="weighin_name">Weigh In</string>
  <string name="graph_name">Graph</string>
  <string name="statistics_name">Statistics</string>
  <string name="backup_to_file">Backup to File</string>
  <string name="backup_weight_data">Backup Data</string>
  <string name="import_weight_data">Import Data</string>
  <string name="on">on</string>
  <string name="save_weight">Save Weight</string>
  <string name="enter_your_weight">Enter Your Weight</string>
  <string name="Day">Day</string>
  <string name="Week">Week</string>
  <string name="TwoWeek">Two Weeks</string>
  <string name="Month">Month</string>
  <string name="TwoMonths">Two Months</string>
  <string name="ThreeMonths">Three Months</string>
  <string name="SixMonths">Six Months</string>
  <string name="Total">Total</string>
  <string name="January">January</string>
  <string name="February">February</string>
  <string name="March">March</string>
  <string name="April">April</string>
  <string name="May">May</string>
  <string name="June">June</string>
  <string name="July">July</string>
  <string name="August">August</string>
  <string name="September">September</string>
  <string name="October">October</string>
  <string name="November">November</string>
  <string name="December">December</string>
 </resources>
